[FIX] show scrollbar

--- a/css/usage-policy.css
+++ b/css/usage-policy.css
@@ -296,12 +296,12 @@ body{
 
 }
 
-.privacy-usage-policy::-webkit-scrollbar{
-  display: none;
-}
-.service-usage-policy::-webkit-scrollbar{
-  display: none;
-}
+/*.privacy-usage-policy::-webkit-scrollbar{*/
+  /*display: none;*/
+/*}*/
+/*.service-usage-policy::-webkit-scrollbar{*/
+  /*display: none;*/
+/*}*/
 
 .usage-policy-info-wrapper {
 
